# gaussians

./: .gitignore  BUILD_dataset.py  RUN.py  debug_results.py  example_override_params.yaml  io_3d.py  jump_negation.py  mesh.py  mesh_generator.py  nerf_cli.md  params.py  pcd_generator.py  plot_utils.py  pyproject.toml  req.txt  rgbd_camera.py  transformation_utils.py
data_handling/: binary_data_extraction.py  frame_extractor.py  online_data.py  online_data_block.py  parse_raw_data.py  read_binary_ply_to_dataframe.py
docker/: Dockerfile  RUN.bat  docker-compose.yml
pipe_utils/: def_params.py  run_iters_pipe.py  script_runner.py
scripts/: BUILD_jpg_color_frames.py  DEBUG_fix_video_for_viewing.py
utils/: random.py  time.py
