[project]
name = "gaussians"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.1.0",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "parametric>=0.12.0",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
